Fix footer text color contrast

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -80,5 +80,5 @@ article {
 
 footer {
     background-color: var(--secondary-color);
-    color: var(--accent2-color);
+    color: var(--accent1-color);
 }
